feat: componente navbar

--- a/tdhuman/src/componentes/Navbar/Navbar.module.css
+++ b/tdhuman/src/componentes/Navbar/Navbar.module.css
@@ -35,10 +35,16 @@
   header ul li a:hover {
     border-bottom: 5px solid #fd9e02;
   }
+
+  .logo2{
+    width: 40%;
+    height: auto;
+  }
   
   .toogle {
     display: none;
   }
+
   
   @media (max-width: 768px) {
     header ul {
