--- a/tdhuman/src/componentes/Homepage/homepage.module.css
+++ b/tdhuman/src/componentes/Homepage/homepage.module.css
@@ -3,11 +3,27 @@
     position: relative;
     top: 40px;
     width: 100%;
-    height: 100%;
+    height: 400px;
     background: #ffb703;
-    z-index: 05;
+    z-index: -1;
     transform: skewY(-9deg);
     transform-origin: bottom;
+  }
+
+  .container{
+    display: flex;
+    width: 55%;
+    justify-content: space-around;
+    align-items: center;
+    margin: 0 auto;
+  }
+
+  .containerCards{
+    display: flex;
+    width: 580px;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 20px 0;
   }
 
   .linha {
@@ -35,11 +51,16 @@
     width: 85%;
     height: 50%;
     object-fit: contain;
+    margin-top: 10px;
   }
   
-  .card p {
+  .texto{
+    font-family: Roboto;
+    font-weight: bold;
+    font-size: 16px;
     text-transform: uppercase;
     text-align: center;
+    margin-top: 20px;
   }
   
  
